Fixed the fisherman in Sicab City saying to use the Fishing Rod from your bag instead of pressing 'A' if you talk to him after getting the rod too
Changed Dad's starting dialogue to tell you to press 'C' instead of 'A'/'Ctrl + A' for calcing since we have a specific key for it now
Made Gold Bottle Caps sell for 2000 instead of 1000 (inflation am I right)
Made Defog/Perish Song >100% accuracy so it can't miss against an evasive foe or something, just added a specific check for Wonder Skin
Updated Torment's description to make it clear that it blocks mid-turn as well in this game
Made the AI click Counter/Mirror Coat/Metal Burst even if they predict they'll be KOed if they have Focus Band
Made Icy Path's higher levels have a different ground texture
Made the choice lock happen AFTER the para/flinch/confusion self hit checks so you aren't choice locked in those situations and can pick a new move if you weren't already choice locked
Redid the Title Screen and added a Loading Screen with a progress bar! Title Screen features:
- Continue Button (greyed out if you don't have any saves)
- New Game Button (with a separate menu where you can have the following settings for your save):
-   Save File Name
-   Nuzlocke Toggle
-   Difficulty (Normal, Hard, Extreme)
-   Ban Shedinja (nuzlocke specific)
-   Ban Revives  (nuzlocke specific)
-   Ban Buyable Revives (nuzlocke specific)
-   Ban Baton Pass (nuzlocke specific)
-   Level Cap Bonus (+0 - +5) (nuzlocke specific)
- Manage Save with a separate menu with the following settings:
-   Rename
-   Delete
-   Open File Location
- Settings menu (same as one in-game)
- Save File Selection menu with A SORT OPTION
- Generate Documentation checkboxes with a Excel toggle for whether or not you want them to generate as Excel sheets (only Trainer doc supported for now!)
Revamped the sprite caching logic to be more efficient and work with fainted sprites too